# pw_auditor

./: README.md  pyproject.toml
.github/workflows/: ci.yml
pw_auditor/: __init__.py  auditor.py  cli.py  entropy.py  patterns.py
pw_auditor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
pw_auditor/data/: common_passwords.txt  common_words.txt
tests/: test_auditor.py  test_entopy.py  test_patterns.py
