[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pw-auditor"
version = "0.1.0"
description = "Offline password strength auditor with entropy + pattern analysis."
authors = [{ name="Samkelo Msibi" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
pw-auditor = "pw_auditor.cli:main"
